--- a/src/Css/Navbar.css
+++ b/src/Css/Navbar.css
@@ -46,7 +46,9 @@
     text-align: center;
   
    }
-    
+   .offcanvas-body{
+    background-color: #c1bfbf !important;
+   }
    .Bodyof .text{
     margin-bottom: 10px;
     color: #f9f9f9 !important;
