--- a/src/Css/Profile.css
+++ b/src/Css/Profile.css
@@ -12,6 +12,9 @@
     border-radius:35px ;
 
 }
+.badge{
+    background-color: #13385c;
+}
 .list-group-item{
     background-color: whitesmoke;
     text-align: left;
@@ -34,6 +37,9 @@
         /* width:350px;
         height:360px; */
         margin-bottom: 15px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
 
     }
 }
